--- a/CV.html
+++ b/CV.html
@@ -190,7 +190,7 @@
                         <li class=""><div class="T11">
                             <span class="">  دبلومة  تصميم الواجهات الأمامية للمواقع الإلكترونية</span></div></li>
                         </ul>
-                        <li class="liil1" dir="rtl">  المعهد القومى للإتصالات &nbsp;<span class="nti"><href="nti.com"><sub> N</sub> T<sup> I</sup></a></span>   </li>
+                        <li class="liil1" dir="rtl">  المعهد القومى للإتصالات &nbsp;<span class="nti"><a href="nti.com"><sub> N</sub> T<sup> I</sup></a></span>   </li>
 
                         <ul class="T1" dir="rtl">
                             <li class=""><div class="T11">
