--- a/CV.html
+++ b/CV.html
@@ -12,7 +12,7 @@
 <div class="child1"></div>
 <div class="child2">
 <div class="img">
-<img width="150px" height="150px" src="./New-Cv/image/Scre.png" alt="pic"/></div>
+<img width="150px" height="150px" src="./image/Scre.png" alt="pic"/></div>
 <div class="h">التفاصيل الشخصية</div>
 <hr/>
 
