--- a/CV.html
+++ b/CV.html
@@ -18,7 +18,7 @@
 
 
 <span class="s">
-<img class="icon" src="../New-Cv/image/icon/m.png" width="20px" height="20px" alt="ppp"/>
+<img class="icon" src="./image/icon/m.png" width="20px" height="20px" alt="ppp"/>
 <div class="mail"><a href="mailto:mahmoudmohsen.eagle@gmail.com"> mahmoudmohsen.eagle<br/>@gmail.com</a> </div>
 </span>
 <span class="s">
