--- a/CV.html
+++ b/CV.html
@@ -22,15 +22,15 @@
 <div class="mail"><a href="mailto:mahmoudmohsen.eagle@gmail.com"> mahmoudmohsen.eagle<br/>@gmail.com</a> </div>
 </span>
 <span class="s">
-<img class="icon" src="../New-Cv/image/icon/t.png" width="20px" height="20px" alt="ppp"/>
+<img class="icon" src="./image/icon/t.png" width="20px" height="20px" alt="ppp"/>
 <div class="tel"> +201017511212 </div>
 </span>
 <span class="s">
-<img class="icon" src="../New-Cv/image/icon/h.png" width="20px" height="20px" alt="ppp"/>
+<img class="icon" src="./image/icon/h.png" width="20px" height="20px" alt="ppp"/>
 <div class="hom">Egypt/Giza</div>
 </span>
 <span class="s">
-<img class="icon" src="../New-Cv/image/icon/b.png" width="20px" height="20px" alt="ppp"/>
+<img class="icon" src="./image/icon/b.png" width="20px" height="20px" alt="ppp"/>
 <div class="dat" dir="rtl">18 نوفمبر 1988  </div>
 </span>
 <span class="s">
@@ -38,27 +38,27 @@
 <div class="loc">Kingdom Of Suadi Arabia </div>
 </span>
 <span class="s">
-<img class="icon" src="../New-Cv/image/icon/li.png" width="20px" height="20px" alt="ppp"/>
+<img class="icon" src="./image/icon/li.png" width="20px" height="20px" alt="ppp"/>
 <div class="li"> رخصة خاصة / نعم </div>
 </span>
 <span class="s">
-<img class="icon" src="../New-Cv/image/icon/g.png" width="20px" height="20px" alt="ppp"/>
+<img class="icon" src="./image/icon/g.png" width="20px" height="20px" alt="ppp"/>
 <div class="li"> Male</div>
 </span>
 <span class="s">
-<img class="icon" src="../New-Cv/image/icon/na.png" width="20px" height="20px" alt="ppp"/>
+<img class="icon" src="./image/icon/na.png" width="20px" height="20px" alt="ppp"/>
 <div class="na"> Egyption</div>
 </span>
 <span class="s">
-<img class="icon" src="../New-Cv/image/icon/s.png" width="20px" height="20px" alt="ppp"/>
+<img class="icon" src="./image/icon/s.png" width="20px" height="20px" alt="ppp"/>
 <div class="si">Single</div>
 </span>
 <span class="s">
-<img class="icon" src="../New-Cv/image/icon/lk.png" width="20px" height="20px" alt="ppp"/>
+<img class="icon" src="./image/icon/lk.png" width="20px" height="20px" alt="ppp"/>
 <div class="si">Linkedin.com/in/mahmoud-mohsen-amin</div>
 </span>
 <span class="s">
-<img class="icon" src="../New-Cv/image/icon/images (2).png" width="20px" height="20px" alt="ppp"/>
+<img class="icon" src="./image/icon/images (2).png" width="20px" height="20px" alt="ppp"/>
 <div class="si">https://github.com<br/>/Mahmoudmohsenamin</div>
 </span>
 
@@ -66,21 +66,21 @@
 <hr/>
 <span class="s">
 <div class="m">Soft Skills</div>
-<img class="icon1" src="../New-Cv/image/icon/icon4.png" width="70px" height="20px" alt="ppp"/>
+<img class="icon1" src="./image/icon/icon4.png" width="70px" height="20px" alt="ppp"/>
 </span>
 <span class="s">
 <div class="m">html,css</div>
-<img class="icon11" src="../New-Cv/image/icon/icon2.png" width="70px" height="20px" alt="ppp"/>
+<img class="icon11" src="./image/icon/icon2.png" width="70px" height="20px" alt="ppp"/>
 </span>
 <div class="hii">اللغات</div>
 <hr/>
 <span class="s">
 <div class="m">اللغة العربية</div>
-<img class="icon2" src="../New-Cv/image/icon/icon2.png" width="70px" height="20px" alt="ppp"/>
+<img class="icon2" src="./image/icon/icon2.png" width="70px" height="20px" alt="ppp"/>
 </span>
 <span class="s">
 <div class="m">English Language</div>
-<img class="icon3" src="../New-Cv/image/icon/icon4.png" width="70px" height="20px" alt="ppp"/>
+<img class="icon3" src="./image/icon/icon4.png" width="70px" height="20px" alt="ppp"/>
 </span>
 <div class="hiii">الهوايات</div>
 <hr/>
