--- a/CV.html
+++ b/CV.html
@@ -34,7 +34,7 @@
 <div class="dat" dir="rtl">18 نوفمبر 1988  </div>
 </span>
 <span class="s">
-<img class="icon" src="../New-Cv/image/icon/l.png" width="20px" height="20px" alt="ppp"/>
+<img class="icon" src="./image/icon/l.png" width="20px" height="20px" alt="ppp"/>
 <div class="loc">Kingdom Of Suadi Arabia </div>
 </span>
 <span class="s">
