--- a/CV.html
+++ b/CV.html
@@ -59,7 +59,7 @@
 </span>
 <span class="s">
 <img class="icon" src="./image/icon/images (2).png" width="20px" height="20px" alt="ppp"/>
-<div class="si">https://github.com<br/>/Mahmoudmohsenamin</div>
+<div class="si"><a href="https://github.com/Mahmoudmohsenamin" target="_black">github.com<br/>/Mahmoudmohsenamin</a></div>
 </span>
 
 <div class="hi">المهارات</div>
