--- a/CV.html
+++ b/CV.html
@@ -55,11 +55,11 @@
 </span>
 <span class="s">
 <img class="icon" src="./image/icon/lk.png" width="20px" height="20px" alt="ppp"/>
-<div class="mail"><a href="https://www.linkedin.com/in/mahmoud-mohsen-amin-/" target="_black">Linkedin.com/in/<br/>mahmoud-mohsen-amin</a></div>
+<div class="ref"><a href="https://www.linkedin.com/in/mahmoud-mohsen-amin-/" target="_black">Linkedin.com/in/<br/>mahmoud-mohsen-amin</a></div>
 </span>
 <span class="s">
 <img class="icon" src="./image/icon/images (2).png" width="20px" height="20px" alt="ppp"/>
-<div class="mail"><a href="https://github.com/Mahmoudmohsenamin" target="_black">github.com<br/>/Mahmoudmohsenamin</a></div>
+<div class="ref"><a href="https://github.com/Mahmoudmohsenamin" target="_black">github.com<br/>/Mahmoudmohsenamin</a></div>
 </span>
 
 <div class="hi">المهارات</div>
