--- a/CV.html
+++ b/CV.html
@@ -108,7 +108,7 @@
 <hr/>
 <div class="d" dir="rtl">
     <li class="oo" >مصمم مواقع إلكترونية مبتدأ</li>
-    <li class="oo">لدى القدرة على تنسيق الصفاحات الإلكترونية</li>
+    <li class="oo">لدى القدرة على تنسيق الصفحات الإلكترونية</li>
     <li class="oo">أجيد أستخدام بعض لغات تصميم الواجهات الأمامية مثل</li>
     <li class="oo">HTML,Css,Jquery,BootStrab</li>
     <li class="oo">كما أننى على معرفة جيدة بإستخدام بعض برامج قواعد البيانات مثل</li>
