--- a/CV.html
+++ b/CV.html
@@ -191,7 +191,7 @@
                             <span class="">  دبلومة  تصميم الواجهات الأمامية للمواقع الإلكترونية</span></div></li>
                         </ul>
                         <li class="liil1" dir="rtl">  المعهد القومى للإتصالات &nbsp;<span class="nti"><a href="https://www.nti.sci.eg/" target="_black"><sub> N</sub> T<sup> I</sup></a></span>   </li>
-
+                         <img class="Sc" src="./image/Scan.png" alt="Ph" />
                         <ul class="T1" dir="rtl">
                             <li class=""><div class="T11">
                                 <span class="">  بكالريوس نظم و معلومات إدارية</span></div></li>
