--- a/CV.html
+++ b/CV.html
@@ -184,7 +184,7 @@
                         <span class=""> دبلومة  تصميم الواجهات الأمامية للمواقع الإلكترونية </span></div></li>
                     </ul>
                    <li class="liil1" dir="rtl">  المعهد القومى للإتصالات &nbsp;<span class="nti"><a href="https://www.nti.sci.eg/" target="_black"><sub> N</sub> T<sup> I</sup></a></span>   </li>
-                    <img class="Sc" src="./image/Scan.png" alt="Ph" />
+                    <img class="Sc" src="./image/ScanNti.jpg" alt="Ph" />
                     <ul class="T1" dir="rtl">
                         <li class=""><div class="T11">
                             <span class="">  دبلومة مهنية فى تصميم المواقع الإلكترونية </span></div></li>
