--- a/CV.html
+++ b/CV.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-     <title> Full-Stack Developer </title>
+     <title> Full-Stack Developer-Php </title>
 <head>
 <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
